# mex-template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  cookiecutter.json  mex.bat  pyproject.toml  renovate.json  requirements.txt
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: changelog-checking.yml  cve-scan.yml  linting.yml  open-code.yml  opencode.yml  release.yml  renovatebot.yml  reviewing.yml  testing.yml
mex-{{ cookiecutter.project_name }}/: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  compose.yaml  cookiecutter.json  mex.bat  pyproject.toml  renovate.json  requirements.txt
mex-{{ cookiecutter.project_name }}/.github/: dependabot.yml
mex-{{ cookiecutter.project_name }}/.github/workflows/: changelog-checking.yml  cookiecutter.yml  cve-scan.yml  documentation.yml  linting.yml  open-code.yml  opencode.yml  release.yml  renovatebot.yml  reviewing.yml  testing.yml
mex-{{ cookiecutter.project_name }}/docs/: conf.py  index.rst  layout.html
mex-{{ cookiecutter.project_name }}/mex/{{ cookiecutter.project_name }}/: main.py
mex-{{ cookiecutter.project_name }}/tests/: test_main.py
