[project]
name = "mex-template"
version = "1.2.0"
description = "Cookiecutter template for MEx python projects."
authors = [{ name = "MEx Team", email = "mex@rki.de" }]
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
urls = { Repository = "https://github.com/robert-koch-institut/mex-template" }
requires-python = ">=3.11,<3.15"
dependencies = []
